Code reformating